# myshell

./: .flake8  .gitignore  README.md  example.sh  pyproject.toml  requirements.txt
doc/: manual.md
myshell/: command.py  context.py  dict.py  environment.py  error.py  instruction.py  job.py  main.py  manager.py  pipeline.py
myshell/commands/: __init__.py  bg.py  cd.py  clr.py  dir.py  echo.py  exec.py  fg.py  help.py  jobs.py  other.py  pwd.py  set.py  shift.py  test.py  time.py  umask.py  unset.py
script/: markdown.sh
tests/: test_myshell.py
